--- a/argocd_1/application.yaml
+++ b/argocd_1/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo-server-argo
+  name: demo
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
