--- a/myapp/1-deployment.yaml
+++ b/myapp/1-deployment.yaml
@@ -1,23 +1,23 @@
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: demo
-  namespace: prod
+  name: nginx
+  namespace: foo
   labels:
-    app: nginx-server
+    app: nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-server
+      app: nginx
   template:
     metadata:
       labels:
-        app: nginx-server
-  spec:
-    containers:
-      - name: nginx-server
-        image: salihbozkaya1001/nginx
-        ports:
-          - containerPort: 80
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: aputra/nginx:v0.1.3
+          ports:
+            - containerPort: 80
