update sync policy

--- a/argocd_1/application.yaml
+++ b/argocd_1/application.yaml
@@ -16,3 +16,14 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
+
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+      allowEmpty: false
+    syncOptions:
+      - Validate=true
+      - CreateNamespace=false
+      - PrunePropagationPolicy=foreground
+      - PruneLast=true
