--- a/envs/staging/apps/myapp.yaml
+++ b/envs/staging/apps/myapp.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: demo
+  name: myapp-staging
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -10,7 +11,7 @@ spec:
   source:
     repoURL: https://github.com/rsship/argomaton.git 
     targetRevision: HEAD  
-    path: myapp
+    path: envs/staging/myapp
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
